# shepherd-tools

./: .bumpversion.cfg  .codespellrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  HISTORY.md  LICENSE  Pipfile  README.md  datalib.py  datalib_ivonne.py  debug_resampler.py  example_convert_ivonne.py  example_extract_cpu_load.py  example_extract_logs.py  example_generate_sawtooth.py  example_plot_traces.py  example_repair_recordings.py  example_voltage_ramp.py  gen_data.py  iv_reconstruct.py  jogging_10m.iv  mppt.py  plot.py  pyproject.toml  readme.md  setup.cfg  setup.py
shepherd_core/: .coverage  LICENSE  README.md  pyproject.toml  setup.cfg  tbt1.yaml  tbt2.yaml
shepherd_core/examples/: eenv_generator.py  experiment_from_yaml.yaml  experiment_generic.py  experiment_generic_var1.py  experiment_generic_var2.py  experiment_models.py  experiment_tb_tasks.yaml  firmware_model.py  firmware_modification.py  inventory.py  model_tester.py  simulate_vharvester.py  simulate_vsource.py  uart_decode_waveform.py  uart_raw2.csv  vharvester_simulation.py  vsource_debug_sim.py  vsource_emulation.py  vsource_simulation.py
shepherd_core/examples/simulations/: vharvester.py  vsource.py  vstorage.py
shepherd_core/shepherd_core/: __init__.py  _old_calibration.py  calibration_hw_def.py  commons.py  config.py  exit_handler.py  logger.py  reader.py  testbed_client.py  testbed_fixture.py  testbed_user.py  version.py  writer.py
shepherd_core/shepherd_core/data_models/: __init__.py  doc_virtual_source.py  model_fixture.py  model_shepherd.py  model_virtualSourceDoc.py  model_wrapper.py  readme.md  virtual_source_doc.txt
shepherd_core/shepherd_core/data_models/base/: cal_measurement.py  calibration.py  content.py  fixture.py  shepherd.py  wrapper.py
shepherd_core/shepherd_core/data_models/content/: __init__.py  _external_fixtures.yaml  _metadata_bonito.yaml  _metadata_eenvs_bonito.yaml  _metadata_eenvs_synthetic_multivariate_random_walk.yaml  _metadata_eenvs_synthetic_on_off_markov.yaml  _metadata_eenvs_synthetic_on_off_windows.yaml  _metadata_eenvs_synthetic_static.yaml  energy_environment.py  energy_environment_fixture.yaml  enum_datatypes.py  firmware.py  firmware_fixture.yaml  virtual_harvester.py  virtual_harvester_config.py  virtual_harvester_config_pru.py  virtual_harvester_defaults.py  virtual_harvester_fixture.yaml  virtual_source.py  virtual_source_config.py  virtual_source_config_pru.py  virtual_source_defaults.py  virtual_source_fixture.yaml  virtual_storage.py  virtual_storage_config.py  virtual_storage_config_pru.py  virtual_storage_experiments.py  virtual_storage_fixture_creator.py  virtual_storage_fixture_creator_ideal.yaml  virtual_storage_fixture_creator_lead.yaml  virtual_storage_fixture_creator_lipo.yaml  virtual_storage_fixture_creator_mlcc.yaml  virtual_storage_fixture_creator_super.yaml  virtual_storage_fixture_creator_tantal.yaml  virtual_storage_fixture_ideal.yaml  virtual_storage_fixture_lead.yaml  virtual_storage_fixture_lipo.yaml  virtual_storage_fixture_mlcc.yaml  virtual_storage_fixture_param_experiments.py  virtual_storage_fixture_super.yaml  (+6 more)
shepherd_core/shepherd_core/data_models/experiment/: __init__.py  emulation_config.py  emulator.py  emulator_features.py  experiment.py  observer_config.py  observer_features.py  observer_features_defaults.py  programmer_config.py  target_cfg.py  target_config.py  tasks.py  virtualHarvester.py  virtualHarvester_fixture.yaml  virtualSource.py  virtualSource_fixture.yaml  virtual_harvester.py  virtual_harvester_fixture.yaml  virtual_source.py  virtual_source_fixture.yaml
shepherd_core/shepherd_core/data_models/task/: __init__.py  emulation.py  firmware_mod.py  harvest.py  helper_paths.py  observer_tasks.py  pre_process.py  programmer.py  programming.py  testbed_tasks.py
shepherd_core/shepherd_core/data_models/testbed/: __init__.py  cape.py  (+25 more)
shepherd_core/shepherd_core/decoder_waveform/: __init__.py  uart.py
shepherd_core/shepherd_core/fw_tools/: __init__.py  converter.py  converter_elf.py  patcher.py  validation.py
shepherd_core/shepherd_core/inventory/: __init__.py  python.py  system.py  target.py
shepherd_core/shepherd_core/testbed_client/: __init__.py  cache_path.py  client.py  client_abc.py  client_abc_fix.py  client_fixtures.py  client_testbed.py  client_web.py  fixtures.py  user_model.py
shepherd_core/shepherd_core/uart/: waveform_decoder.py
shepherd_core/shepherd_core/vsource/: __init__.py  math64_safe.py  target_model.py  virtual_converter_model.py  virtual_harvester_config.py  virtual_harvester_defs.yml  virtual_harvester_model.py  virtual_harvester_simulation.py  virtual_source_model.py  virtual_source_simulation.py  virtual_storage_experiments.py  virtual_storage_model.py  virtual_storage_model_fixed_point_math.py  virtual_storage_models_kibam.py  virtual_storage_simulator.py
shepherd_core/src/shepherd_core/: __init__.py  logger.py  reader.py
shepherd_core/tests/: conftest.py  example_cal_data.yaml  example_cal_meas.yaml  example_config_emulator.yml  tast_base_models.py  test_cal_hw.py  test_content_fixtures.py  test_content_models.py  test_examples.py  test_experiment_fixtures.py  test_experiment_models.py  test_logger.py  test_reader.py  test_task_models.py  test_testbed_fixtures.py  test_testbed_models.py  test_writer.py
shepherd_core/tests/data_models/: conftest.py  example_config_emulator.yaml  example_config_testbed.yaml  example_config_virtsource.yaml  test_base_models.py  test_content_fixtures.py  test_content_models.py  test_examples.py  test_experiment_models.py  test_task_generation.py  test_task_models.py  test_testbed_fixtures.py  test_testbed_models.py
shepherd_core/tests/decoder_waveform/: test_decoder.py
shepherd_core/tests/fw_tools/: build_msp.elf  build_nrf.elf  test_converter.py  test_patcher.py  test_validation.py
shepherd_core/tests/inventory/: test_inventory.py
shepherd_core/tests/testbed_client/: test_fixtures.py
shepherd_core/tests/vsource/: conftest.py  test_converter.py  test_harvester.py  test_model.py  test_z.py
(+150 files in other folders)
