# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "shepherd-tools"
version = "2025.10.1"
description = "Programming- and CLI-Interface for the h5-dataformat of the Shepherd-Testbed"
readme = "README.md"

dependencies = [
    "shepherd-core[all]",
    "shepherd-data[all]",
    # dev
    "pre-commit",
    "pre-commit-uv", # check with `pre-commit --version`
    "bump2version",
    "ruff",
    "ty",
]
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.sources]
shepherd-core = { path = "./shepherd_core", editable = true}
shepherd-data = { path = "./shepherd_data", editable = true}

[tool.setuptools]
packages = ["shepherd_core", "shepherd_data"]

[tool.ty.environment]
root = ["./shepherd_core", "./shepherd_data"]
# TODO: renaming dirs could 'repair' autodiscovery

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["*/tests/**"]
