# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "shepherd-tools"
version = "2025.10.1"
description = "Programming- and CLI-Interface for the h5-dataformat of the Shepherd-Testbed"
readme = "README.md"

dependencies = [
    "shepherd-core[all]",
    "shepherd-data[all]",
    # dev
    "prek",  # pre-commit plugin-replacement
    "bump2version",
    "ruff",
    "ty",
]
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.sources]
shepherd-core = { path = "./shepherd_core", editable = true}
shepherd-data = { path = "./shepherd_data", editable = true}

[tool.setuptools]
packages = ["shepherd_core", "shepherd_data"]

[tool.ty.environment]
root = ["./shepherd_core", "./shepherd_data", "./extra", "./scratch"]
# TODO: renaming dirs could 'repair' autodiscovery

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = [
    "*/tests/**",
    "*/examples/**",  # temporary until specific rules can be disabled
]

[tool.ty.rules]
unresolved-import = "ignore"
missing-argument = "ignore"
