[metadata]
name = shepherd_data
version = attr: shepherd_data.__version__
author = Ingmar Splitt, Kai Geissdoerfer
license = MIT
url = https://github.com/orgua/shepherd-datalib
project_urls =
    Bug Tracker = https://github.com/orgua/shepherd-datalib/issues
description = Programming- and CLI-Interface for the h5-dataformat of the Shepherd-Testbed
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testbed, beaglebone, pru, batteryless, energyharvesting, solar
classifiers =
    # How mature is this project? Common values are
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
zip_safe = True
include_package_data = True
install_requires =
    click
    h5py
    matplotlib
    numpy
    pandas
    pyYAML
    scipy
    tqdm
    samplerate  # TODO: test for now
    python_version>"3.5"
tests_require =
    pytest
    pyfakefs
    pytest-timeout
    pytest-click

[options.extras_require]
dev =
    black
    pylint
    twine

[options.entry_points]
console_scripts =
    executable-name = shepherd_data.cli:cli

[options.packages.find]
where=src

[options.package_data]
#examples = *.py, *.iv
* = README.md
shepherd_data = # TODO: not working as expected
    src/examples/*.py
    src/examples/*.iv
