[metadata]
name = shepherd_data
version = attr: shepherd_data.__version__
author = Ingmar Splitt, Kai Geissdoerfer
author_email = ingmar.splitt@tu-dresden.de
maintainer_email = ingmar.splitt@tu-dresden.de
license = MIT
url = https://pypi.org/project/shepherd-data/
project_urls =
    Tracker = https://github.com/orgua/shepherd-datalib/issues
    Source = https://github.com/orgua/shepherd-datalib
description = Programming- and CLI-Interface for the h5-dataformat of the Shepherd-Testbed
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testbed, beaglebone, pru, batteryless, energyharvesting, solar
platforms = unix, linux, osx, cygwin, win32, win64
classifiers =

    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English

[options]
packages = find:
package_dir =
    =src
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    click
    h5py
    matplotlib
    numpy
    pandas
    pyYAML
    scipy
    tqdm

[options.extras_require]
dev =
    black
    pylint
    flake8
    twine
    pre-commit

test =
    pytest
    pytest-click
    coverage

[options.entry_points]
console_scripts =
    shepherd_data = shepherd_data.cli:cli

[options.packages.find]
where=src

[options.package_data]
* = README.md
# TODO: not working as expected
# examples = *.py, *.iv
shepherd_data =
    src/examples/*.py
    src/examples/*.iv

[aliases]
test=pytest

[tool:pytest]
# opts: verbose result for each tests
addopts = -vvv


[codespell]
builtin = clear,rare,informal,usage,code,en-GB_to_en-US

#skip =
#ignore-words-list =

# options without argument
check-filenames =
check-hidden =

[isort]
profile=black
force_single_line=true

[flake8]
max-line-length = 100
require-plugins =
    # https://github.com/DmytroLitvinov/awesome-flake8-extensions

    ### Bugs & Code-Smells
    flake8-bugbear
    flake8-secure-coding-standard
    flake8-bandit
    flake8-builtins

    ### Clean Code
    flake8-comprehensions
    flake8-simplify
    flake8-eradicate
    flake8-commas

    ### Limitations
    flake8-blind-except
    flake8-logging-format
    flake8-print

    ### Documentation
    flake8-comments
    # flake8-docstrings
    # flake8-rst-docstrings

    ### Test-Improvements
    flake8-assertive

extend-ignore =
    # black-formatter-specific
    E203
    # open() vs os.open()
    SCS109
    # hideous commas
    C812
    C815
    C813
    # DOCString TODO: reduce here
    D100
    D102
    D103

per-file-ignores =
    # asserts (in tests are ok), also allow print() instead of logger
    tests/*: SCS108 S101 T201
    # allow print()
    src/examples/*: T201

count = True
statistics = True
